# Rehab-Robot

./: README.md
Kinect/: SkeletonBasics-D2D.vcxproj  SkeletonBasics.cpp  SkeletonBasics.rc  readMe.md  resource.h
Kinect/KinectWindows/: KinectWindows.sln
Kinect/other/: Gesture.cpp  Gesture.h  Motion.cpp  Motion.h  SkeletonBasics-D2D.vcxproj.filters  SkeletonBasics.h
Robot/: CarlsCode.cpp  Robot.cpp  Robot.h  main.cpp
Server/: Makefile  READ ME  SimonSays.ini  db.sqlite3  ftgl_D.lib  ftgl_static_D.lib  test.py
Server/Fyp/: Fyp.workspace
Server/Tests/: main.cpp
Server/config/: application.ini
Server/controllers/: Makefile
Server/helpers/: Makefile
Server/lib/: libcontroller.so.1.0.0  libhelper.so.1.0.0  libmodel.so.1.0.0  libview.so.1.0.0
Server/models/: Makefile
Server/mysite/: settings.py  urls.py
Server/public/: index.html
Server/tabletUI/: apps.py  views.py
Server/views/: Makefile
SimonSays/: CMakeLists.txt  SimonSays.cpp  SimonSays.h  main.cpp
SpeechRecog/SpeechRecog/: Clip 4  Makefile  SpeechRecog.pro  SpeechRecognitionThread.cpp  SpeechRecognitionThread.h  google_transcribe.py  kinectmic  kinectmic.cpp  kinectmic.h  kinectrecord.cpp  kinectrecord.h  main.cpp  (+4 more)
Story Time/: Animal.h  CMakeLists.txt  Elephant.txt  Gesture.h  Gorilla.txt  Introduction.h  Storybook.cpp  elephantGesture.h  gorillaGesture.h  kangarooGesture.h  lionGesture.h  monkey.txt  monkeyGesture.h
Tablet/: Games - Simon_Says.html  Games - Story_Telling.html  Games.html  Support.html  index.html  landing(unchanged).html  notes.txt  readMe.md  therapy(unchanged).html
(+276 files in other folders)
